src/objects/POD__c.object
<CustomObject>
    <description>POD (Marketing)</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>POD Description</description>
        <inlineHelpText>POD Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>For use in data migrations.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>POD_Name__c</fullName>
        <description>POD Name</description>
        <globalPicklist>POD</globalPicklist>
        <inlineHelpText>POD Name</inlineHelpText>
        <label>POD Name</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>POD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>POD_Name__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>POD Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>